--- a/frontend/src/components/atoms/CardHeaderDropdownItem.scss
+++ b/frontend/src/components/atoms/CardHeaderDropdownItem.scss
@@ -11,7 +11,7 @@
 }
 .cardHeaderDropdownItem:hover, .cardHeaderDropdownItem:focus {
   background-color: var(--component-background-light);
-  color: var(--text-white);
+  color: var(--white-0);
   outline: none;
 }
 
