--- a/frontend/src/components/bills/BillTotal.scss
+++ b/frontend/src/components/bills/BillTotal.scss
@@ -2,7 +2,7 @@
 
 .billTotal {
   border-radius: 12px;
-  background-color: var(--component-background-dark);
+  background-color: var(--grey-900);
   padding: 24px;
   display: flex;
   flex-direction: column;
@@ -33,11 +33,11 @@
 .billTotalTitle {
   margin-bottom: 11px;
   font-size: 14px;
-  color: var(--text-white);
+  color: var(--white-0);
 }
 
 .billTotalAmount {
   font-size: 32px;
   font-weight: 600;
-  color: var(--text-white);
+  color: var(--white-0);
 }
