--- a/frontend/src/styles/forms.scss
+++ b/frontend/src/styles/forms.scss
@@ -3,11 +3,11 @@
   display: block;
   font-size: 13px;
   font-weight: 600;
-  color: var(--text-grey);
+  color: var(--grey-500);
 }
 
 @mixin form-field-outline() {
-  border: 1px solid var(--component-background-dark);
+  border: 1px solid var(--grey-900);
   transition: border 0.1s ease;
   outline: none;
 }
