--- a/frontend/src/components/atoms/CardHeaderDropdownList.scss
+++ b/frontend/src/components/atoms/CardHeaderDropdownList.scss
@@ -1,7 +1,7 @@
 .cardHeaderDropdownList {
-  box-shadow: 0 5px 40px -25px var(--component-background-dark);
+  box-shadow: 0 5px 40px -25px var(--grey-900);
   border-radius: 8px;
-  background-color: var(--component-background-bright);
+  background-color: var(--white-0);
   display: none;
   top: 0;
   right: 0;
