--- a/frontend/src/components/atoms/InputMoney.scss
+++ b/frontend/src/components/atoms/InputMoney.scss
@@ -13,14 +13,14 @@
   top: calc(50% - 9px);
   left: 20px;
   font-size: 14px;
-  color: var(--sidebar-entry-text-default);
+  color: var(--grey-300);
 }
 .inputMoneyIcon.active {
-  color: var(--text-dark);
+  color: var(--grey-900);
 }
 
 .inputMoneyInput {
-  border: 1px solid var(--component-background-grey);
+  border: 1px solid var(--beige-500);
   padding: 12px 20px 12px 40px;
   border-radius: 8px;
   width: 100%;
@@ -32,13 +32,13 @@
   @include forms.form-field-outline;
 }
 .inputMoneyInput::placeholder {
-  color: var(--sidebar-entry-text-default);
+  color: var(--grey-300);
 }
 
 .inputMoneyValidation {
   margin-left: 8px;
   font-size: 12px;
-  color: var(--text-red);
+  color: var(--red);
   display: none;
 }
 .inputMoneyValidation.visible {
