--- a/frontend/src/components/bills/BillCardTableRow.scss
+++ b/frontend/src/components/bills/BillCardTableRow.scss
@@ -10,7 +10,7 @@
   font-weight: 600;
 }
 .billCardTableRowAmount.red {
-  color: var(--text-red);
+  color: var(--red);
 }
 
 .billCardTableRowDate {
@@ -18,10 +18,10 @@
   flex-direction: row;
   align-items: center;
   font-size: 14px;
-  color: var(--text-grey);
+  color: var(--grey-500);
 }
 .billCardTableRowDate.green {
-  color: var(--text-green);
+  color: var(--green);
 }
 
 .billCardTableRowDateIcon {
