--- a/frontend/src/components/budgets/BudgetDiagrammCard/BudgetsDiagramCard.scss
+++ b/frontend/src/components/budgets/BudgetDiagrammCard/BudgetsDiagramCard.scss
@@ -2,7 +2,7 @@
 
 .budgetsDiagramCard {
   border-radius: 12px;
-  background-color: var(--component-background-bright);
+  background-color: var(--white-0);
   padding: 32px 32px 24px 32px;
   display: flex;
   flex-direction: column;
