--- a/frontend/src/components/overlay/dropdownCategory/DropdownCategoryBar.scss
+++ b/frontend/src/components/overlay/dropdownCategory/DropdownCategoryBar.scss
@@ -2,7 +2,7 @@
 
 .dropdownCategoryBar {
   border-radius: 8px;
-  border: 1px solid var(--component-background-grey);
+  border: 1px solid var(--beige-500);
   padding: 11px 50px 13px 20px;
   display: flex;
   flex-direction: row;
@@ -46,7 +46,7 @@
 .dropdownCategoryValidation {
   margin-left: 8px;
   font-size: 12px;
-  color: var(--text-red);
+  color: var(--red);
   display: none;
 }
 .dropdownCategoryValidation.visible {
