--- a/frontend/src/components/overlay/dropdownCategory/DropdownCategoryListItem.scss
+++ b/frontend/src/components/overlay/dropdownCategory/DropdownCategoryListItem.scss
@@ -9,7 +9,7 @@
 }
 .dropdownCategoryListItem:hover, .dropdownCategoryListItem:focus {
   background-color: var(--component-background-light);
-  color: var(--text-white);
+  color: var(--white-0);
   outline: none;
 }
 .dropdownCategoryListItem.disabled {
