--- a/frontend/src/components/overlay/dropdownCategory/OverlayDropdownCategory.scss
+++ b/frontend/src/components/overlay/dropdownCategory/OverlayDropdownCategory.scss
@@ -6,8 +6,8 @@
 
 .dropdownCategoryList {
   border-radius: 8px;
-  box-shadow: 0 5px 40px -25px var(--component-background-dark);
-  background-color: var(--component-background-bright);
+  box-shadow: 0 5px 40px -25px var(--grey-900);
+  background-color: var(--white-0);
   display: flex;
   flex-direction: column;
   max-height: 40px;
