--- a/frontend/src/components/overview/OverviewHeader.scss
+++ b/frontend/src/components/overview/OverviewHeader.scss
@@ -8,15 +8,15 @@
   padding: 4px;
   font-size: 14px;
   text-decoration: none;
-  color: var(--text-grey);
+  color: var(--grey-500);
 }
 .overviewHeaderLink:hover{
-  color: var(--text-dark);
+  color: var(--grey-900);
 }
 .overviewHeaderLink:focus{
   border-radius: 4px;
-  box-shadow: 0 0 0 2px var(--component-background-dark);
-  color: var(--text-dark);
+  box-shadow: 0 0 0 2px var(--grey-900);
+  color: var(--grey-900);
   outline: none;
 }
 
