--- a/frontend/src/components/overview/bills/OverviewBills.scss
+++ b/frontend/src/components/overview/bills/OverviewBills.scss
@@ -2,7 +2,7 @@
 
 .overviewBills {
   border-radius: 12px;
-  background-color: var(--component-background-bright);
+  background-color: var(--white-0);
   padding: 32px;
   display: flex;
   flex-direction: column;
