--- a/frontend/src/components/overview/transactions/OverviewTransactions.scss
+++ b/frontend/src/components/overview/transactions/OverviewTransactions.scss
@@ -2,7 +2,7 @@
 
 .overviewTransactions {
   border-radius: 12px;
-  background-color: var(--component-background-bright);
+  background-color: var(--white-0);
   padding: 32px;
   display: grid;
   grid-template-rows: auto auto;
