--- a/frontend/src/components/pots/PotCard.scss
+++ b/frontend/src/components/pots/PotCard.scss
@@ -2,11 +2,10 @@
 
 .potCard {
   border-radius: 12px;
-  background-color: var(--component-background-bright);
+  background-color: var(--white-0);
   padding: 24px;
   display: flex;
   flex-direction: column;
-  row-gap: 32px;
 
   @include mixins.phone() {
     padding: 16px;
@@ -17,23 +16,23 @@
 .potCardButton {
   border: 0;
   border-radius: 8px;
-  background-color: var(--page-background);
+  background-color: var(--beige-100);
   padding: 16px;
   font-weight: 600;
-  color: var(--text-dark);
+  color: var(--grey-900);
   cursor: pointer;
   white-space: nowrap;
 }
 .potCardButton:hover {
   background-color: var(--component-background-light);
-  color: var(--text-white);
+  color: var(--white-0);
   transition: background-color 0.2s ease, color 0.2s ease;
 }
 .potCardButton:focus-visible {
   border-radius: 4px;
-  box-shadow: 0 0 0 2px var(--component-background-dark);
+  box-shadow: 0 0 0 2px var(--grey-900);
   background-color: var(--component-background-light);
-  color: var(--text-white);
+  color: var(--white-0);
   transition: background-color 0.2s ease, color 0.2s ease;
   outline: none;
 }
@@ -42,4 +41,12 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 16px;
+}
+
+.potCardContent {
+  border-radius: 12px;
+  background-color: var(--white-0);
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
 }
