--- a/frontend/src/components/pots/PotCardDetails.scss
+++ b/frontend/src/components/pots/PotCardDetails.scss
@@ -3,12 +3,12 @@
 .potCardDetailsPercentCurrent {
   font-size: 12px;
   font-weight: 600;
-  color: var(--text-grey);
+  color: var(--grey-500);
 }
 
 .potCardDetailsPercentTotal {
   font-size: 12px;
-  color: var(--text-grey);
+  color: var(--grey-500);
 }
 
 .potCardDetailsTotal {
@@ -28,7 +28,7 @@
 .potCardDetailsTotalLabel {
   flex-grow: 1;
   font-size: 14px;
-  color: var(--text-grey);
+  color: var(--grey-500);
 }
 
 .potCardBarCurrent {
@@ -59,7 +59,7 @@
 .potCardBarMax {
   margin: 16px 0;
   border-radius: 4px;
-  background-color: var(--page-background);
+  background-color: var(--beige-100);
   height: 8px;
   position: relative;
 }
