--- a/frontend/src/components/transactions/pagination/PaginationPages.scss
+++ b/frontend/src/components/transactions/pagination/PaginationPages.scss
@@ -8,13 +8,13 @@
 
 .paginationPagesButton {
   border-radius: 8px;
-  border: 1px solid var(--searchbar-grey);
-  background-color: var(--component-background-bright);
+  border: 1px solid var(--beige-500);
+  background-color: var(--white-0);
   padding: 12px 16px 10px 16px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  color: var(--text-dark);
+  color: var(--grey-900);
   transition:
           border 0.3s ease,
           border-color 0.3s ease,
@@ -22,10 +22,10 @@
           box-shadow 0.3s ease;
 }
 .paginationPagesButton.isActive {
-  border: 1px solid var(--component-background-dark);
-  box-shadow: 0 0 0 2px var(--component-background-dark);
-  background-color: var(--component-background-dark);
-  color: var(--text-white);
+  border: 1px solid var(--grey-900);
+  box-shadow: 0 0 0 2px var(--grey-900);
+  background-color: var(--grey-900);
+  color: var(--white-0);
 }
 .paginationPagesButton.isActive:focus-visible {
   border: 1px solid var(--component-background-light);
@@ -33,13 +33,13 @@
   outline: none;
 }
 .paginationPagesButton.isNotActive:hover {
-  border: 1px solid var(--component-background-grey);
-  background-color: var(--component-background-grey);
-  color: var(--text-white);
+  border: 1px solid var(--beige-500);
+  background-color: var(--beige-500);
+  color: var(--white-0);
   cursor: pointer;
 }
 .paginationPagesButton.isNotActive:focus-visible {
-  border-color: var(--component-background-grey);
+  border-color: var(--beige-500);
   outline: none;
-  box-shadow: 0 0 0 2px var(--component-background-dark);
+  box-shadow: 0 0 0 2px var(--grey-900);
 }
