--- a/frontend/src/components/transactions/table/TableHeader.scss
+++ b/frontend/src/components/transactions/table/TableHeader.scss
@@ -4,7 +4,7 @@
   grid-template-columns: calc(48% - 32px) calc(19% - 32px) calc(20% - 32px) 13%;
   column-gap: 32px;
   font-size: 13px;
-  color: var(--text-grey);
+  color: var(--grey-500);
 }
 
 .tableColumnAmount {
