fe-29 create ui components

--- a/frontend/src/styles/text.scss
+++ b/frontend/src/styles/text.scss
@@ -46,7 +46,7 @@
   letter-spacing: 0;
 }
 
-@mixin text-preset-5 {
+@mixin text-preset-5-bold {
   font-family: 'Public Sans', sans-serif;
   font-size: 12px;
   font-weight: 700;
