--- a/frontend/src/components/atoms/OverlayContentLabel.scss
+++ b/frontend/src/components/atoms/OverlayContentLabel.scss
@@ -1,5 +1,8 @@
-@use '../../styles/forms';
+@use '../../styles/colors';
+@use '../../styles/text';
 
 .overlayContentLabel {
-  @include forms.form-field-title;
+  color: colors.$grey-500;
+
+  @include text.text-preset-5-bold;
 }
