fe-29 add PotProgressForm to showcase

--- a/frontend/src/components/pots/potprogress/PotProgressDisplay.scss
+++ b/frontend/src/components/pots/potprogress/PotProgressDisplay.scss
@@ -1,6 +1,7 @@
 @use '../../../styles/spaces';
 
 .potProgressDisplay {
+  margin-bottom: spaces.$spaceXL;
   display: flex;
   flex-direction: column;
   row-gap: spaces.$spaceM;
