--- a/frontend/src/components/pots/potprogress/PotProgressDisplayChartBarBase.scss
+++ b/frontend/src/components/pots/potprogress/PotProgressDisplayChartBarBase.scss
@@ -2,8 +2,13 @@
 @use '../../../styles/spaces';
 
 .potProgressDisplayChartBarBase {
-  border-radius: spaces.$spaceXS 0 0 spaces.$spaceXS;
   height: spaces.$spaceS;
-  color: colors.$grey-900;
+  background-color: colors.$grey-900;
   width: clamp(0px, calc(80% - 2px), 100%);
+}
+.potProgressDisplayChartBarBase.hardRightBorder {
+  border-radius: spaces.$spaceXS 0 0 spaces.$spaceXS;
+}
+.potProgressDisplayChartBarBase.roundBorder {
+  border-radius: spaces.$spaceXS;
 }
