--- a/frontend/src/components/atoms/OverlayContentLabel.scss
+++ b/frontend/src/components/atoms/OverlayContentLabel.scss
@@ -1,7 +1,10 @@
 @use '../../styles/colors';
+@use '../../styles/spaces';
 @use '../../styles/text';
 
 .overlayContentLabel {
+  margin-bottom: spaces.$spaceXS;
+  display: block;
   color: colors.$grey-500;
 
   @include text.text-preset-5-bold;
