--- a/frontend/src/components/pots/potprogress/PotProgressDisplayChart.scss
+++ b/frontend/src/components/pots/potprogress/PotProgressDisplayChart.scss
@@ -11,6 +11,7 @@
 .potProgressDisplayChartBarValues {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .potProgressDisplayChartBarValuesPercent {
