--- a/frontend/src/components/atoms/InputMoney.scss
+++ b/frontend/src/components/atoms/InputMoney.scss
@@ -1,4 +1,4 @@
-@use '../../styles/forms';
+@use '../../styles/colors';
 
 .inputMoney {
   position: relative;
@@ -26,10 +26,14 @@
   width: 100%;
 }
 .inputMoneyInput:hover {
-  @include forms.form-field-outline;
+  border: 1px solid var(colors.$grey-900);
+  transition: border 0.1s ease;
+  outline: none;
 }
 .inputMoneyInput:focus {
-  @include forms.form-field-outline;
+  border: 1px solid var(colors.$grey-900);
+  transition: border 0.1s ease;
+  outline: none;
 }
 .inputMoneyInput::placeholder {
   color: var(--grey-300);
