--- a/frontend/src/components/atoms/OverlayContentLabel.scss
+++ b/frontend/src/components/atoms/OverlayContentLabel.scss
@@ -1,6 +1,6 @@
 @use '../../styles/colors';
 @use '../../styles/spaces';
-@use '../../styles/text';
+@use '../../styles/fonts';
 
 .overlayContentLabel {
   margin-bottom: spaces.$spaceXS;
