--- a/frontend/src/components/overlay/OverlayContentAddNewBudget.scss
+++ b/frontend/src/components/overlay/OverlayContentAddNewBudget.scss
@@ -1,4 +1,6 @@
-@use '../../styles/forms';
+@use '../../styles/colors';
+@use '../../styles/fonts';
+@use '../../styles/functions';
 
 .overlayContentAddNewBudget {
   display: flex;
@@ -6,7 +8,11 @@
 }
 
 .fieldTitle {
-  @include forms.form-field-title;
+  margin-bottom: 8px;
+  display: block;
+  color: var(colors.$grey-500);
+
+  @include fonts.text-preset-4-bold;
 }
 
 
