--- a/frontend/src/components/overlay/OverlayDropdownColor.scss
+++ b/frontend/src/components/overlay/OverlayDropdownColor.scss
@@ -1,4 +1,4 @@
-@use '../../styles/forms';
+@use '../../styles/colors';
 
 .dropdownColor {
   display: flex;
@@ -30,10 +30,14 @@
   position: relative;
 }
 .dropdownColorWrapper:hover {
-  @include forms.form-field-outline;
+  border: 1px solid var(colors.$grey-900);
+  transition: border 0.1s ease;
+  outline: none;
 }
 .dropdownColorWrapper:focus-visible {
-  @include forms.form-field-outline;
+  border: 1px solid var(colors.$grey-900);
+  transition: border 0.1s ease;
+  outline: none;
 }
 
 .dropDownColorList {
