--- a/frontend/src/components/pots/PotCardButtons.scss
+++ b/frontend/src/components/pots/PotCardButtons.scss
@@ -1,6 +1,6 @@
 @use '../../styles/colors';
 @use '../../styles/spaces';
-@use '../../styles/text';
+@use '../../styles/fonts';
 
 .potCardButton {
   border: 0;
