--- a/frontend/src/components/pots/potprogress/PotProgressDisplayChart.scss
+++ b/frontend/src/components/pots/potprogress/PotProgressDisplayChart.scss
@@ -1,6 +1,6 @@
 @use '../../../styles/colors';
 @use '../../../styles/spaces';
-@use '../../../styles/text';
+@use '../../../styles/fonts';
 
 .potProgressDisplayChart {
   display: flex;
