--- a/frontend/src/components/pots/potprogress/PotProgressDisplayHeader.scss
+++ b/frontend/src/components/pots/potprogress/PotProgressDisplayHeader.scss
@@ -1,5 +1,5 @@
 @use '../../../styles/colors';
-@use '../../../styles/text';
+@use '../../../styles/fonts';
 
 .potProgressDisplayHeader {
   display: flex;
