--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -1,4 +1,4 @@
-$beige-50: #98908B;
+$beige-500: #98908B;
 $beige-100: #F8F4F0;
 $grey-900: #201F24;
 $grey-500: #696868;
@@ -10,13 +10,13 @@ $cyan: #82C9D7;
 $navy: #626070;
 $red: #C94736;
 $purple: #826CB0;
+$pink: #AF81BA;
 $turquoise: #597C7C;
 $brown: #93674F;
 $magenta: #934F6F;
 $blue: #3F82B2;
 $navy-grey: #97A0AC;
 $army-green: #7F9161;
-$pink: #AF81BA;
 $gold: #CAB361;
 $orange: #BE6C49;
 $white: #F7F7F7;
@@ -24,3 +24,4 @@ $white-0: #FFFFFF;
 $black: #000000;
 $component-background-light: #B1A9A4;
 $horizontal-line-darker: #E0E0E0;
+$attribution: #3E5BA8;
