--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -1,4 +1,12 @@
+@use 'colors';
+@use 'fonts';
+@use 'spaces';
+
 :root {
+  --icon-filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);
+
+  //DEPRECATED
+
   font-family: 'Public Sans', sans-serif;
   font-weight: normal;
 
@@ -29,39 +37,48 @@
 
   --component-background-light: #B1A9A4;
   --horizontal-line-darker: #E0E0E0;
-
-  --icon-filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);
-
-  @font-face {
-    font-family: 'Public Sans';
-    src: url('assets/fonts/PublicSans-VariableFont_wght.ttf') format('truetype');
-    font-weight: 100 900; /* Variable Font unterstützt Gewichtung von 100 bis 900 */
-    font-style: normal;
-  }
-
-  @font-face {
-    font-family: 'Public Sans';
-    src: url('assets/fonts/PublicSans-Italic-VariableFont_wght.ttf') format('truetype');
-    font-weight: 100 900;
-    font-style: italic;
-  }
 }
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 h1 {
-  margin: 9px 0;
-  font-size: 30px;
-  font-weight: 700;
-  color: var(--grey-900);
+  color: colors.$grey-900;
+
+  @include fonts.text-preset-1;
 }
 
 hr {
-  margin: 20px 0;
+  margin: spaces.$spaceML 0;
   border: 0;
-  background-color: var(--grey-100);
+  background-color: colors.$grey-100;
   height: 1px;
   width: 100%;
+}
+
+.appSpace {
+  min-height: calc(100vh - 14px);
+}
+
+.attribution {
+  background-color: colors.$white;
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  z-index: 100;
+
+  @include fonts.text-preset-6;
+}
+
+.attribution a {
+  color: colors.$attribution;
 }
