fe-39 refactor atom styles

--- a/frontend/src/styles/spaces.scss
+++ b/frontend/src/styles/spaces.scss
@@ -9,3 +9,5 @@ $spaceML: functions.to-rem(20px);
 $spaceL: functions.to-rem(24px);
 $spaceXL: functions.to-rem(32px);
 $spaceXXL: functions.to-rem(40px);
+
+$radiusS: functions.to-rem(8px);
