--- a/frontend/src/styles/spaces.scss
+++ b/frontend/src/styles/spaces.scss
@@ -11,3 +11,4 @@ $spaceXL: functions.to-rem(32px);
 $spaceXXL: functions.to-rem(40px);
 
 $radiusS: functions.to-rem(8px);
+$radiusMS: functions.to-rem(12px);
